--- a/build.gradle
+++ b/build.gradle
@@ -4,14 +4,10 @@ apply plugin: 'idea'
 group 'basic-task'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation('org.apache.commons:commons-lang3:3.+')
-    
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.apache.commons:commons-lang3:+'
 }
